layout bug fix

--- a/taskflow.css
+++ b/taskflow.css
@@ -255,8 +255,9 @@ body {
 /* if the card back is hovered, change shape */
 .clsTaskCardBack:hover {
   /* padding: var(--card-padding); */
-  border-top: 1px solid var(--color-border);
-  display: flex;
+  /* border-top: 1px solid var(--color-border); */
+  border: 1px solid red;
+  /* display: flex; */
   box-shadow: var(--shadow-hover);
   background-color: var(--color-bg-card-hover);
 }
@@ -754,8 +755,11 @@ input:hover {
 
 .clsTaskCardTagsRow {
   display: flex;
-  gap: 12px;
-  align-items: center;
+  gap: 0px;
+  align-items: baseline;
+  flex-direction: row;
+  justify-content: space-between;
+  
 }
 
 
